# homelab

./: .gitignore  .profile  README.md  ansible.sh  initialize.sh  nuc_linux.sh  nuc_linux.yml  pyproject.toml  requirements.yml  setup_linux.yml  setup_mac.sh  setup_mac.yml  setup_undervolt.sh  setup_undervolt.yml  xps_linux.md  xps_linux.yml  xps_setup.md
dotfiles/: .profile  .zshrc  undervolt-resume.service  undervolt.service
legacy/: setup_linux.sh
legacy/roles/docker/tasks/: main.yml
legacy/roles/git/tasks/: main.yml
legacy/roles/hardening/tasks/: main.yml
legacy/roles/misc/: cleaner.yml  java.yml  mendeley.yml  synology.yml
legacy/roles/python/tasks/: main.yml
roles/Comcast.sdkman/meta/: .galaxy_install_info
roles/bootstrap/tasks/: main.yml  undervolt.yml
roles/dmg_installer/tasks/: install_single_dmg.yml  main.yml
roles/docker/tasks/: main.yml
roles/dotfiles/files/: .zsh_plugins.txt  .zshrc
roles/dotfiles/tasks/: main.yml
roles/git/tasks/: main.yml
roles/java/tasks/: main.yml
roles/jetbrains/tasks/: main.yml
roles/latex/tasks/: main.yml
roles/misc/: albert.yml  flatpak.yml  keybase.yml  merge.yml  neovim.yml  nextcloud.yml
roles/node/tasks/: main.yml
roles/python/tasks/: main.yml
roles/r/tasks/: main.yml
roles/rust/tasks/: main.yml
roles/scala/tasks/: main.yml
roles/settings/tasks/: main.yaml  main.yml
roles/undervolt/tasks/: main.yml
roles/undervolt/templates/: undervolt.timer
roles/vscode/tasks/: main.yml
roles/zsh/files/: .zsh_plugins.conf
roles/zsh/tasks/: main.yml
roles/zsh/templates/: .zshrc
(+10 files in other folders)
