[tool.poetry]
name = "homelab"
version = "0.0.1"
description = ""
authors = ["Roland Schlaefli <rolandschlaefli@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ansible = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
